fixed puzzle selection page too wide

--- a/client/components/PuzzleItem/PuzzleItem.css
+++ b/client/components/PuzzleItem/PuzzleItem.css
@@ -1,3 +1,7 @@
 .puzzleItem__button {
   min-width: 150px;
 }
+
+.mb-3 {
+  margin: 0;
+}
